force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/ucinn_ascendv2__Is_Validated__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set this to true if your process has validated the rating information.</description>
    <inlineHelpText>Set this to true if your process has validated the rating information.</inlineHelpText>
    <label>Is Validated</label>
    <type>Checkbox</type>
</CustomField>