force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/ucinn_ascendv2__P2G_Description__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__P2G_Description__c</fullName>
    <label>P2G Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>