force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/ucinn_ascendv2__P2G_Score__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__P2G_Score__c</fullName>
    <label>P2G Score</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1|0</fullName>
            </value>
            <value>
                <fullName>1|1</fullName>
            </value>
            <value>
                <fullName>1|2</fullName>
            </value>
            <value>
                <fullName>1|3</fullName>
            </value>
            <value>
                <fullName>1|4</fullName>
            </value>
            <value>
                <fullName>1|5</fullName>
            </value>
            <value>
                <fullName>1|6</fullName>
            </value>
            <value>
                <fullName>2|0</fullName>
            </value>
            <value>
                <fullName>2|1</fullName>
            </value>
            <value>
                <fullName>2|2</fullName>
            </value>
            <value>
                <fullName>2|3</fullName>
            </value>
            <value>
                <fullName>2|4</fullName>
            </value>
            <value>
                <fullName>2|5</fullName>
            </value>
            <value>
                <fullName>2|6</fullName>
            </value>
            <value>
                <fullName>3|0</fullName>
            </value>
            <value>
                <fullName>3|1</fullName>
            </value>
            <value>
                <fullName>3|2</fullName>
            </value>
            <value>
                <fullName>3|3</fullName>
            </value>
            <value>
                <fullName>3|4</fullName>
            </value>
            <value>
                <fullName>3|5</fullName>
            </value>
            <value>
                <fullName>3|6</fullName>
            </value>
            <value>
                <fullName>4|0</fullName>
            </value>
            <value>
                <fullName>4|1</fullName>
            </value>
            <value>
                <fullName>4|2</fullName>
            </value>
            <value>
                <fullName>4|3</fullName>
            </value>
            <value>
                <fullName>4|4</fullName>
            </value>
            <value>
                <fullName>4|5</fullName>
            </value>
            <value>
                <fullName>4|6</fullName>
            </value>
            <value>
                <fullName>5|0</fullName>
            </value>
            <value>
                <fullName>5|1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>