force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/ucinn_ascendv2__Profile__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Profile__c</fullName>
    <label>Profile</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>System Administrator</fullName>
            </value>
            <value>
                <fullName>Gift Planning Officer</fullName>
            </value>
            <value>
                <fullName>Leadership Annual Giving Manager</fullName>
            </value>
            <value>
                <fullName>Presidential</fullName>
            </value>
            <value>
                <fullName>Gift Specialist</fullName>
            </value>
            <value>
                <fullName>Gift Planning Manager</fullName>
            </value>
            <value>
                <fullName>Gift Processor</fullName>
            </value>
            <value>
                <fullName>Development Officer</fullName>
            </value>
            <value>
                <fullName>Development Research</fullName>
            </value>
            <value>
                <fullName>RMATS</fullName>
            </value>
            <value>
                <fullName>Stewardship Officer</fullName>
            </value>
            <value>
                <fullName>Development Officer - School of Medicine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>