force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/ucinn_ascendv2__Rating_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Rating_Number__c</fullName>
    <label>Rating Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>