force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/ucinn_ascendv2__Stock_Total_Value_Rating__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Stock_Total_Value_Rating__c</fullName>
    <label>Stock Total Value Rating</label>
    <length>100</length>
    <type>Text</type>
</CustomField>