force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/ucinn_ascendv2__Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Wealth Rating 2004</fullName>
            </value>
            <value>
                <fullName>Wealth Rating 2008</fullName>
            </value>
            <value>
                <fullName>Wealth Rating 2013</fullName>
            </value>
            <value>
                <fullName>Wealth Rating 2017</fullName>
            </value>
            <value>
                <fullName>Development Officer</fullName>
            </value>
            <value>
                <fullName>Research Strategies</fullName>
                <default>true</default>
                <label>Research Strategies</label>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>