force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/ucinn_ascendv2__Wealth_Rating__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Wealth_Rating__c</fullName>
    <label>Wealth Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unable to Rate</fullName>
            </value>
            <value>
                <fullName>$1-$24,999</fullName>
            </value>
            <value>
                <fullName>$25,000-$49,999</fullName>
            </value>
            <value>
                <fullName>$50,000-$99,999</fullName>
            </value>
            <value>
                <fullName>$100,000-$249,999</fullName>
            </value>
            <value>
                <fullName>$250,000-$499,999</fullName>
            </value>
            <value>
                <fullName>$500,000-$999,999</fullName>
            </value>
            <value>
                <fullName>$1,000,000-$2,499,999</fullName>
            </value>
            <value>
                <fullName>$2,500,000-$4,999,999</fullName>
            </value>
            <value>
                <fullName>$5,000,000-$9,999,999</fullName>
            </value>
            <value>
                <fullName>$10,000,000-$24,999,999</fullName>
            </value>
            <value>
                <fullName>$25,000,000-$49,999,999</fullName>
            </value>
            <value>
                <fullName>$50,000,000-$74,999,999</fullName>
            </value>
            <value>
                <fullName>$75,000,000-$99,999,999</fullName>
            </value>
            <value>
                <fullName>$100,000,000-$249,999,999</fullName>
            </value>
            <value>
                <fullName>$250,000,000+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>