force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/ucinn_ascendv2__Wealth_Rating_Combined_Number_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Wealth_Rating_Combined_Number_Formula__c</fullName>
    <formula>ucinn_ascendv2__Wealth_Rating_Type_Number_Formula__c +  ucinn_ascendv2__Wealth_Rating_Number_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wealth Rating Combined Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>