force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/ucinn_ascendv2__Wealth_Rating_Comment__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Wealth_Rating_Comment__c</fullName>
    <label>Wealth Rating Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>