force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/ucinn_ascendv2__Wealth_Rating_Name_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Wealth_Rating_Name_Auto_Number__c</fullName>
    <displayFormat>WR-{0000000}</displayFormat>
    <label>Wealth Rating Name Auto Number</label>
    <type>AutoNumber</type>
</CustomField>