force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/ucinn_ascendv2__Wealth_Rating_Number_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Wealth_Rating_Number_Formula__c</fullName>
    <formula>CASE( ucinn_ascendv2__Wealth_Rating__c,
&quot;Unable to Rate&quot;, 0,
&quot;$1-$24,999&quot;, 1,
&quot;$25,000-$49,999&quot;, 2,
&quot;$50,000-$99,999&quot;, 3,
&quot;$100,000-$249,999&quot;, 4,
&quot;$250,000-$499,999&quot;, 5,
&quot;$500,000-$999,999&quot;, 6,
&quot;$1,000,000-$2,499,999&quot;, 7,
&quot;$2,500,000-$4,999,999&quot;, 8,
&quot;$5,000,000-$9,999,999&quot;, 9,
&quot;$10,000,000-$24,999,999&quot;, 10,
&quot;$25,000,000-$49,999,999&quot;, 11,
&quot;$50,000,000-$74,999,999&quot;, 12,
&quot;$75,000,000-$99,999,999&quot;, 13,
&quot;$100,000,000-$249,999,999&quot;, 14,
&quot;$250,000,000+&quot;, 15,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wealth Rating Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>