force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/ucinn_ascendv2__Wealth_Rating_Type_Number_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Wealth_Rating_Type_Number_Formula__c</fullName>
    <description>This field is used in rollup fields to calculate a rating on the Contact record</description>
    <formula>CASE(ucinn_ascendv2__Type__c , &quot;Fundraiser&quot;, 700, &quot;Development Research&quot;, 500, &quot;WealthEngine&quot;, 300, &quot;Donorscape&quot;, 100, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wealth Rating Type Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>