force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <label>Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GGA</fullName>
            </value>
            <value>
                <fullName>Target Analytics</fullName>
            </value>
            <value>
                <fullName>Windfall</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>