force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/Wealth_Code__c.field-meta.xml
<CustomField>
    <fullName>Wealth_Code__c</fullName>
    <description>Used for ISUF</description>
    <label>Wealth Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High Net Worth Philanthropists</fullName>
            </value>
            <value>
                <fullName>Financially Secure Philanthropists</fullName>
            </value>
            <value>
                <fullName>Upwardly Mobile Philanthropists</fullName>
            </value>
            <value>
                <fullName>Steady Humanitarians</fullName>
            </value>
            <value>
                <fullName>Devoted Humanitarians</fullName>
            </value>
            <value>
                <fullName>Faithful Humanitarians</fullName>
            </value>
            <value>
                <fullName>Middle Class Casual Donors</fullName>
            </value>
            <value>
                <fullName>Working Class Casual Donors</fullName>
            </value>
            <value>
                <fullName>Marginal Casual Donors</fullName>
            </value>
            <value>
                <fullName>Sporadic Casual Donors</fullName>
            </value>
            <value>
                <fullName>Affluent Enigmas</fullName>
            </value>
            <value>
                <fullName>Blue Collar Masses</fullName>
            </value>
            <value>
                <fullName>Non-Starter Masses</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>