force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/Wealth_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Wealth_Estimate__c</fullName>
    <label>Wealth Estimate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$1,000,000 - $4,999,999</fullName>
            </value>
            <value>
                <fullName>$10,000,000 - $24,999,999</fullName>
            </value>
            <value>
                <fullName>$100,000 - $499,999</fullName>
            </value>
            <value>
                <fullName>$25,000,000+</fullName>
            </value>
            <value>
                <fullName>$5,000,000 - $9,999,999</fullName>
            </value>
            <value>
                <fullName>$500,000 - $999,999</fullName>
            </value>
            <value>
                <fullName>No match in wealth database</fullName>
            </value>
            <value>
                <fullName>Wealth Indicators, but not Significant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>