force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/Wealth_Screening_Prospect__c.field-meta.xml
<CustomField>
    <fullName>Wealth_Screening_Prospect__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Wealth Screening Prospect</label>
    <type>Checkbox</type>
</CustomField>