force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/recordTypes/ucinn_ascendv2__Contact_Wealth_Rating.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Contact_Wealth_Rating</fullName>
    <active>true</active>
    <description>A constituent&apos;s wealth rating.</description>
    <label>Contact Wealth Rating</label>
</RecordType>