force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/recordTypes/Wealth_Rating_2004.recordType-meta.xml
<RecordType>
    <fullName>Wealth_Rating_2004</fullName>
    <active>true</active>
    <label>Wealth Rating 2004</label>
</RecordType>