force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/recordTypes/Wealth_Rating_2008.recordType-meta.xml
<RecordType>
    <fullName>Wealth_Rating_2008</fullName>
    <active>true</active>
    <label>Wealth Rating 2008</label>
</RecordType>