force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/recordTypes/Wealth_Rating_2017.recordType-meta.xml
<RecordType>
    <fullName>Wealth_Rating_2017</fullName>
    <active>true</active>
    <label>Wealth Rating 2017</label>
</RecordType>