force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/validationRules/ucinn_ascendv2__Must_Populate_Either_WR_Or_EGC.validationRule-meta.xml
<ValidationRule>
    <fullName>ucinn_ascendv2__Must_Populate_Either_WR_Or_EGC</fullName>
    <active>false</active>
    <description>Must populate either wealth rating field or estimated giving capacity.</description>
    <errorConditionFormula>$Setup.ucinn_ascendv2__Bypass_Settings__c.ucinn_ascendv2__Bypass_Validation_Rules__c &lt;&gt; TRUE &amp;&amp;
ISPICKVAL(ucinn_ascendv2__Wealth_Rating__c, &quot;&quot;) &amp;&amp; ISNULL(ucinn_ascendv2__Estimated_Total_Giving_Capacity__c) &amp;&amp;
OR(
RecordType.DeveloperName = &quot;Account_Wealth_Rating&quot;,
RecordType.DeveloperName = &quot;Contact_Wealth_Rating&quot;
)&amp;&amp;
RecordType.NamespacePrefix = &apos;ucinn_ascendv2&apos;</errorConditionFormula>
    <errorMessage>Please populate either the wealth rating field or the estimated total giving capacity field.</errorMessage>
</ValidationRule>