force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/validationRules/ucinn_ascendv2__Only_Edit_Own_Wealth_Ratings.validationRule-meta.xml
<ValidationRule>
    <fullName>ucinn_ascendv2__Only_Edit_Own_Wealth_Ratings</fullName>
    <active>false</active>
    <description>User can only edit the records they own.</description>
    <errorConditionFormula>$Setup.ucinn_ascendv2__Bypass_Settings__c.ucinn_ascendv2__Bypass_Validation_Rules__c &lt;&gt; TRUE &amp;&amp; $User.Id &lt;&gt; OwnerId &amp;&amp;
OR(
RecordType.DeveloperName = &quot;Account_Wealth_Rating&quot;,
RecordType.DeveloperName = &quot;Contact_Wealth_Rating&quot;
)&amp;&amp;
RecordType.NamespacePrefix = &apos;ucinn_ascendv2&apos;</errorConditionFormula>
    <errorDisplayField>OwnerId</errorDisplayField>
    <errorMessage>Only the owner of the record can edit fields.</errorMessage>
</ValidationRule>