force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/validationRules/ucinn_ascendv2__Profile_Name_Does_Not_Match_Picklist.validationRule-meta.xml
<ValidationRule>
    <fullName>ucinn_ascendv2__Profile_Name_Does_Not_Match_Picklist</fullName>
    <active>false</active>
    <description>Profile picklist value should match user&apos;s profile name.</description>
    <errorConditionFormula>$Setup.ucinn_ascendv2__Bypass_Settings__c.ucinn_ascendv2__Bypass_Validation_Rules__c &lt;&gt; TRUE &amp;&amp;
ISNEW() &amp;&amp; TEXT( ucinn_ascendv2__Profile__c ) &lt;&gt; $Profile.Name &amp;&amp; !ISPICKVAL(ucinn_ascendv2__Type__c, &apos;DS - Campaign&apos;) &amp;&amp;
OR(
RecordType.DeveloperName = &quot;Account_Wealth_Rating&quot;,
RecordType.DeveloperName = &quot;Contact_Wealth_Rating&quot;
)&amp;&amp;
RecordType.NamespacePrefix = &apos;ucinn_ascendv2&apos;</errorConditionFormula>
    <errorDisplayField>ucinn_ascendv2__Profile__c</errorDisplayField>
    <errorMessage>Profile value should match user&apos;s profile.</errorMessage>
</ValidationRule>