force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/validationRules/ucinn_ascendv2__Wealth_Rating_Profile_Cannot_Be_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>ucinn_ascendv2__Wealth_Rating_Profile_Cannot_Be_Changed</fullName>
    <active>false</active>
    <description>Wealth rating profile cannot be changed.</description>
    <errorConditionFormula>$Setup.ucinn_ascendv2__Bypass_Settings__c.ucinn_ascendv2__Bypass_Validation_Rules__c &lt;&gt; TRUE &amp;&amp;
ISCHANGED( ucinn_ascendv2__Profile__c ) &amp;&amp;
OR(
RecordType.DeveloperName = &quot;Account_Wealth_Rating&quot;,
RecordType.DeveloperName = &quot;Contact_Wealth_Rating&quot;
)&amp;&amp;
RecordType.NamespacePrefix = &apos;ucinn_ascendv2&apos;</errorConditionFormula>
    <errorDisplayField>ucinn_ascendv2__Profile__c</errorDisplayField>
    <errorMessage>The wealth rating profile cannot be changed from its original value.</errorMessage>
</ValidationRule>