force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>ucinn_ascendv2__Type__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Research_Code__c</columns>
    <columns>Begin_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ucinn_ascendv2__Wealth_Rating__c.Wealth_Rating_2017</value>
    </filters>
    <label>All</label>
</ListView>