force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/listViews/Holly_s_Wealth_Ratings.listView-meta.xml
<ListView>
    <fullName>Holly_s_Wealth_Ratings</fullName>
    <columns>NAME</columns>
    <columns>Capacity__c</columns>
    <columns>ucinn_ascendv2__Contact__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>ucinn_ascendv2__Wealth_Rating__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>hhelmer</value>
    </filters>
    <label>Holly&apos;s Wealth Ratings</label>
</ListView>