force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/listViews/Not_a_Prospect_Status_Check.listView-meta.xml
<ListView>
    <fullName>Not_a_Prospect_Status_Check</fullName>
    <columns>NAME</columns>
    <columns>Wealth_Screening_Prospect__c</columns>
    <columns>Rating_Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>RECORDTYPE</columns>
    <columns>ucinn_ascendv2__Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Wealth_Screening_Prospect__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Rating_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Not a Prospect Status Check</label>
    <sharedTo>
        <group>Prospect_Development</group>
    </sharedTo>
</ListView>