force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/listViews/Vendor_Check.listView-meta.xml
<ListView>
    <fullName>Vendor_Check</fullName>
    <columns>NAME</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>ucinn_ascendv2__Type__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UPDATEDBY_USER</field>
        <operation>equals</operation>
        <value>Holly Helmer</value>
    </filters>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>greaterOrEqual</operation>
        <value>7/1/2023 12:00 AM</value>
    </filters>
    <filters>
        <field>ucinn_ascendv2__Type__c</field>
        <operation>equals</operation>
        <value>Vendor</value>
    </filters>
    <label>Vendor Check</label>
</ListView>